--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <script type="importmap">
             {
                 "imports": {
-                    "phaser": "https://cdn.jsdelivr.net/npm/phaser@3.80.0-beta.2/+esm"
+                    "phaser": "https://cdn.jsdelivr.net/npm/phaser@3.80.0-beta.2/+esm",
+                    "bitecs": "https://cdn.jsdelivr.net/npm/bitecs@0.3.40/+esm"
                 }
             }
         </script>
